# Memories-Client

./: .gitignore  README.md
Android/: README.md  settings.gradle
Android/app/: build.gradle
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/assets/: app-config.example.properties  app-config.properties
Android/app/src/main/java/com/mrcwoods/memories/: ApiClient.java  AppConfig.java  ImageCache.java  ImageItem.java  LocalStore.java  MainActivity.java  RateLimitedQueue.java  ThemeConfig.java  UploadTask.java  UserSession.java
Android/app/src/main/res/drawable/: ic_app.xml  ic_clear.xml  ic_contact.xml  ic_download.xml  ic_gallery.xml  ic_github.xml  ic_link.xml  ic_opensource.xml  ic_privacy.xml  ic_security.xml  ic_share.xml  ic_terms.xml  ic_upload.xml  ic_user.xml
Android/app/src/main/res/values/: colors.xml  styles.xml
Linux/: CMakeLists.txt
Linux/resources/: memories-client.desktop
Linux/src/: main.cpp
Linux/src/app/: Application.cpp
Linux/src/ui/: GalleryWidget.cpp  GalleryWidget.h  ImageViewer.cpp  LoginDialog.cpp  MainWindow.cpp  UploadDialog.cpp
Linux/src/utils/: ImageCache.cpp  ImageCache.h  ThemeManager.cpp  ThemeManager.h
Windows/: CMakeLists.txt  package-lock.json
Windows/resources/: app-icon.rc  resources.qrc  style-dark.qss  style.qss
Windows/src/: main.cpp
Windows/src/ui/: AppleTitleBar.cpp  FlowLayout.cpp  FlowLayout.h  GalleryWidget.cpp  ImageInfoDialog.cpp  ImageViewer.cpp  LoginDialog.cpp  MainWindow.cpp  MessageBox.cpp  MessageBox.h  SettingsDialog.cpp  SettingsDialog.h  UploadDialog.cpp  UploadDialog.h
Windows/src/utils/: ImageCache.cpp  ImageCache.h  ThemeManager.cpp
admin/: README.md  index.html  package-lock.json  package.json  vite.config.ts
admin/src/: App.tsx  main.tsx  styles.css
iOS/: README.md  package.json  需求文档.md
iOS/docs/: DESIGN.md
iOS/src/: App.tsx  index.css  routes.tsx
iOS/src/components/image/: BatchToolbar.tsx  ImageCard.tsx  ImageToolbar.tsx  ImageViewer.tsx  MetadataPanel.tsx  Slideshow.tsx
iOS/src/components/layout/: Footer.tsx  Header.tsx
iOS/src/components/settings/: SettingsPanel.tsx
iOS/src/contexts/: SettingsContext.tsx
iOS/src/hooks/: useLongPress.ts
iOS/src/lib/: api.ts  imageCache.ts
iOS/src/pages/: GalleryPage.tsx  StatusCheckPage.tsx
iOS/src/types/: index.ts
web/: README.md
web/src/pages/: DownloadPage.tsx
